// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=1 _type="default" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert default kol-alert-wc msg">
        <div class="heading">
          <span class="visually-hidden">
            kol-message
          </span>
          <kol-icon _icons="codicon codicon-comment" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="1"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=1 _type="error" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert error kol-alert-wc msg">
        <div class="heading">
          <span class="visually-hidden">
            kol-error
          </span>
          <kol-icon _icons="codicon codicon-error" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="1"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=1 _type="info" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert info kol-alert-wc msg">
        <div class="heading">
          <span class="visually-hidden">
            kol-info
          </span>
          <kol-icon _icons="codicon codicon-info" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="1"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=1 _type="success" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert-wc msg success">
        <div class="heading">
          <span class="visually-hidden">
            kol-success
          </span>
          <kol-icon _icons="codicon codicon-pass" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="1"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=1 _type="warning" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert-wc msg warning">
        <div class="heading">
          <span class="visually-hidden">
            kol-warning
          </span>
          <kol-icon _icons="codicon codicon-warning" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="1"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=2 _type="default" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert default kol-alert-wc msg">
        <div class="heading">
          <span class="visually-hidden">
            kol-message
          </span>
          <kol-icon _icons="codicon codicon-comment" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="2"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=2 _type="error" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert error kol-alert-wc msg">
        <div class="heading">
          <span class="visually-hidden">
            kol-error
          </span>
          <kol-icon _icons="codicon codicon-error" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="2"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=2 _type="info" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert info kol-alert-wc msg">
        <div class="heading">
          <span class="visually-hidden">
            kol-info
          </span>
          <kol-icon _icons="codicon codicon-info" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="2"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=2 _type="success" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert-wc msg success">
        <div class="heading">
          <span class="visually-hidden">
            kol-success
          </span>
          <kol-icon _icons="codicon codicon-pass" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="2"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=2 _type="warning" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert-wc msg warning">
        <div class="heading">
          <span class="visually-hidden">
            kol-warning
          </span>
          <kol-icon _icons="codicon codicon-warning" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="2"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=3 _type="default" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert default kol-alert-wc msg">
        <div class="heading">
          <span class="visually-hidden">
            kol-message
          </span>
          <kol-icon _icons="codicon codicon-comment" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="3"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=3 _type="error" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert error kol-alert-wc msg">
        <div class="heading">
          <span class="visually-hidden">
            kol-error
          </span>
          <kol-icon _icons="codicon codicon-error" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="3"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=3 _type="info" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert info kol-alert-wc msg">
        <div class="heading">
          <span class="visually-hidden">
            kol-info
          </span>
          <kol-icon _icons="codicon codicon-info" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="3"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=3 _type="success" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert-wc msg success">
        <div class="heading">
          <span class="visually-hidden">
            kol-success
          </span>
          <kol-icon _icons="codicon codicon-pass" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="3"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=3 _type="warning" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert-wc msg warning">
        <div class="heading">
          <span class="visually-hidden">
            kol-warning
          </span>
          <kol-icon _icons="codicon codicon-warning" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="3"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=4 _type="default" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert default kol-alert-wc msg">
        <div class="heading">
          <span class="visually-hidden">
            kol-message
          </span>
          <kol-icon _icons="codicon codicon-comment" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="4"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=4 _type="error" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert error kol-alert-wc msg">
        <div class="heading">
          <span class="visually-hidden">
            kol-error
          </span>
          <kol-icon _icons="codicon codicon-error" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="4"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=4 _type="info" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert info kol-alert-wc msg">
        <div class="heading">
          <span class="visually-hidden">
            kol-info
          </span>
          <kol-icon _icons="codicon codicon-info" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="4"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=4 _type="success" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert-wc msg success">
        <div class="heading">
          <span class="visually-hidden">
            kol-success
          </span>
          <kol-icon _icons="codicon codicon-pass" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="4"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=4 _type="warning" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert-wc msg warning">
        <div class="heading">
          <span class="visually-hidden">
            kol-warning
          </span>
          <kol-icon _icons="codicon codicon-warning" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="4"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=5 _type="default" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert default kol-alert-wc msg">
        <div class="heading">
          <span class="visually-hidden">
            kol-message
          </span>
          <kol-icon _icons="codicon codicon-comment" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="5"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=5 _type="error" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert error kol-alert-wc msg">
        <div class="heading">
          <span class="visually-hidden">
            kol-error
          </span>
          <kol-icon _icons="codicon codicon-error" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="5"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=5 _type="info" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert info kol-alert-wc msg">
        <div class="heading">
          <span class="visually-hidden">
            kol-info
          </span>
          <kol-icon _icons="codicon codicon-info" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="5"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=5 _type="success" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert-wc msg success">
        <div class="heading">
          <span class="visually-hidden">
            kol-success
          </span>
          <kol-icon _icons="codicon codicon-pass" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="5"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=5 _type="warning" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert-wc msg warning">
        <div class="heading">
          <span class="visually-hidden">
            kol-warning
          </span>
          <kol-icon _icons="codicon codicon-warning" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="5"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=6 _type="default" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert default kol-alert-wc msg">
        <div class="heading">
          <span class="visually-hidden">
            kol-message
          </span>
          <kol-icon _icons="codicon codicon-comment" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="6"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=6 _type="error" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert error kol-alert-wc msg">
        <div class="heading">
          <span class="visually-hidden">
            kol-error
          </span>
          <kol-icon _icons="codicon codicon-error" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="6"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=6 _type="info" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert info kol-alert-wc msg">
        <div class="heading">
          <span class="visually-hidden">
            kol-info
          </span>
          <kol-icon _icons="codicon codicon-info" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="6"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=6 _type="success" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert-wc msg success">
        <div class="heading">
          <span class="visually-hidden">
            kol-success
          </span>
          <kol-icon _icons="codicon codicon-pass" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="6"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=6 _type="warning" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert-wc msg warning">
        <div class="heading">
          <span class="visually-hidden">
            kol-warning
          </span>
          <kol-icon _icons="codicon codicon-warning" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="6"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=1 _type="default" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert default kol-alert-wc msg" role="alert">
        <div class="heading">
          <span class="visually-hidden">
            kol-message
          </span>
          <kol-icon _icons="codicon codicon-comment" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="1"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=1 _type="error" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert error kol-alert-wc msg" role="alert">
        <div class="heading">
          <span class="visually-hidden">
            kol-error
          </span>
          <kol-icon _icons="codicon codicon-error" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="1"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=1 _type="info" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert info kol-alert-wc msg" role="alert">
        <div class="heading">
          <span class="visually-hidden">
            kol-info
          </span>
          <kol-icon _icons="codicon codicon-info" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="1"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=1 _type="success" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert-wc msg success" role="alert">
        <div class="heading">
          <span class="visually-hidden">
            kol-success
          </span>
          <kol-icon _icons="codicon codicon-pass" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="1"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=1 _type="warning" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert-wc msg warning" role="alert">
        <div class="heading">
          <span class="visually-hidden">
            kol-warning
          </span>
          <kol-icon _icons="codicon codicon-warning" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="1"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=2 _type="default" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert default kol-alert-wc msg" role="alert">
        <div class="heading">
          <span class="visually-hidden">
            kol-message
          </span>
          <kol-icon _icons="codicon codicon-comment" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="2"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=2 _type="error" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert error kol-alert-wc msg" role="alert">
        <div class="heading">
          <span class="visually-hidden">
            kol-error
          </span>
          <kol-icon _icons="codicon codicon-error" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="2"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=2 _type="info" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert info kol-alert-wc msg" role="alert">
        <div class="heading">
          <span class="visually-hidden">
            kol-info
          </span>
          <kol-icon _icons="codicon codicon-info" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="2"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=2 _type="success" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert-wc msg success" role="alert">
        <div class="heading">
          <span class="visually-hidden">
            kol-success
          </span>
          <kol-icon _icons="codicon codicon-pass" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="2"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=2 _type="warning" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert-wc msg warning" role="alert">
        <div class="heading">
          <span class="visually-hidden">
            kol-warning
          </span>
          <kol-icon _icons="codicon codicon-warning" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="2"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=3 _type="default" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert default kol-alert-wc msg" role="alert">
        <div class="heading">
          <span class="visually-hidden">
            kol-message
          </span>
          <kol-icon _icons="codicon codicon-comment" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="3"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=3 _type="error" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert error kol-alert-wc msg" role="alert">
        <div class="heading">
          <span class="visually-hidden">
            kol-error
          </span>
          <kol-icon _icons="codicon codicon-error" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="3"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=3 _type="info" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert info kol-alert-wc msg" role="alert">
        <div class="heading">
          <span class="visually-hidden">
            kol-info
          </span>
          <kol-icon _icons="codicon codicon-info" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="3"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=3 _type="success" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert-wc msg success" role="alert">
        <div class="heading">
          <span class="visually-hidden">
            kol-success
          </span>
          <kol-icon _icons="codicon codicon-pass" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="3"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=3 _type="warning" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert-wc msg warning" role="alert">
        <div class="heading">
          <span class="visually-hidden">
            kol-warning
          </span>
          <kol-icon _icons="codicon codicon-warning" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="3"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=4 _type="default" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert default kol-alert-wc msg" role="alert">
        <div class="heading">
          <span class="visually-hidden">
            kol-message
          </span>
          <kol-icon _icons="codicon codicon-comment" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="4"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=4 _type="error" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert error kol-alert-wc msg" role="alert">
        <div class="heading">
          <span class="visually-hidden">
            kol-error
          </span>
          <kol-icon _icons="codicon codicon-error" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="4"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=4 _type="info" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert info kol-alert-wc msg" role="alert">
        <div class="heading">
          <span class="visually-hidden">
            kol-info
          </span>
          <kol-icon _icons="codicon codicon-info" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="4"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=4 _type="success" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert-wc msg success" role="alert">
        <div class="heading">
          <span class="visually-hidden">
            kol-success
          </span>
          <kol-icon _icons="codicon codicon-pass" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="4"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=4 _type="warning" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert-wc msg warning" role="alert">
        <div class="heading">
          <span class="visually-hidden">
            kol-warning
          </span>
          <kol-icon _icons="codicon codicon-warning" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="4"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=5 _type="default" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert default kol-alert-wc msg" role="alert">
        <div class="heading">
          <span class="visually-hidden">
            kol-message
          </span>
          <kol-icon _icons="codicon codicon-comment" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="5"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=5 _type="error" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert error kol-alert-wc msg" role="alert">
        <div class="heading">
          <span class="visually-hidden">
            kol-error
          </span>
          <kol-icon _icons="codicon codicon-error" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="5"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=5 _type="info" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert info kol-alert-wc msg" role="alert">
        <div class="heading">
          <span class="visually-hidden">
            kol-info
          </span>
          <kol-icon _icons="codicon codicon-info" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="5"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=5 _type="success" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert-wc msg success" role="alert">
        <div class="heading">
          <span class="visually-hidden">
            kol-success
          </span>
          <kol-icon _icons="codicon codicon-pass" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="5"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=5 _type="warning" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert-wc msg warning" role="alert">
        <div class="heading">
          <span class="visually-hidden">
            kol-warning
          </span>
          <kol-icon _icons="codicon codicon-warning" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="5"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=6 _type="default" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert default kol-alert-wc msg" role="alert">
        <div class="heading">
          <span class="visually-hidden">
            kol-message
          </span>
          <kol-icon _icons="codicon codicon-comment" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="6"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=6 _type="error" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert error kol-alert-wc msg" role="alert">
        <div class="heading">
          <span class="visually-hidden">
            kol-error
          </span>
          <kol-icon _icons="codicon codicon-error" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="6"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=6 _type="info" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert info kol-alert-wc msg" role="alert">
        <div class="heading">
          <span class="visually-hidden">
            kol-info
          </span>
          <kol-icon _icons="codicon codicon-info" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="6"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=6 _type="success" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert-wc msg success" role="alert">
        <div class="heading">
          <span class="visually-hidden">
            kol-success
          </span>
          <kol-icon _icons="codicon codicon-pass" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="6"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=6 _type="warning" 1`] = `
<kol-alert class="kol-alert">
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="alert kol-alert-wc msg warning" role="alert">
        <div class="heading">
          <span class="visually-hidden">
            kol-warning
          </span>
          <kol-icon _icons="codicon codicon-warning" _label="" class="heading-icon"></kol-icon>
          <div class="heading-content">
            <kol-heading-wc _label="Überschrift" _level="6"></kol-heading-wc>
            <div class="content">
              <slot></slot>
            </div>
          </div>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;
